@@ -44,7 +44,7 @@ class FirstTabFireFoxBrowserTests {
 
 	@BeforeEach
 	void reset() {
-		open(String.format("http://host.testcontainers.internal:%d/solar", appPort));
+		open("http://host.testcontainers.internal:%d/solar".formatted(appPort));
 	}
 
 	@Test
